--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +8,91 @@
     <title>Document</title>
 </head>
 <body>
+    <header id="header">
+        <!-- logo -->
+        <div class="logo">
+            <img src="/icons/trombone.svg" alt="Trombone Icon" id="header-img" width="100">
+            <h1 class="logo__text">Original Trombones</h1>
+        </div>
+        <nav id="nav-bar">
+            <ul>
+                <li><a href="#features" class="nav-link">Features</a></li>
+                <li><a href="#howitworks" class="nav-link">How It Works</a></li>
+                <li><a href="#pricing" class="nav-link">Pricing</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="main">
+        <section class="getStarted">
+            <h2 class="getStarted__title">Handcrafted, home-made masterpieces</h3>
+            <form action="https://www.freecodecamp.com/email-submit" id="form">
+                <input type="email" name="email" placeholder="Introduzca su correo electrónico" required id="email">
+                <input class="button" id="submit" type="submit" value="Get Started">
+            </form>
+        </section>
+        <section id="features">
+            <div class="feature">
+                <img class="feature__icon" src="icons/fire.svg" alt="Fire Icon" width="100">
+                <div class="feature__text">
+                    <h2 class="feature__title">Premium Materials</h3>
+                    <p class="feature__description">Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img class="feature__icon" src="icons/truck.svg" alt="Truck Icon" width="100">
+                <div class="feature__text">
+                    <h2 class="feature__title">Fast Shipping</h3>
+                    <p class="feature__description">We make sure you receive your trombone as soon as we finished making it. We also provide free returns if you are not satisfied.</p>
+                </div>
+            </div>
+            <div class="feature">
+                <img class="feature__icon" src="icons/quality.svg" alt="Quality Icon" width="100">
+                <div class="feature__text">
+                    <h2 class="feature__title">Quality Assurance</h3>
+                    <p class="feature__description">For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
+                </div>
+            </div>
+        </section>
+        <section id="howitworks">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        </section>
+        <section id="pricing">
+            <div class="product">
+                <h3 class="product__name">Tenor Trombone</h3>
+                <div class="product__description">
+                    <h4 class="product__price">$600</h4>
+                    <p class="product__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi?</p>
+                    <button class="button">Select</button>
+                </div>
+            </div>
+            <div class="product">
+                <h3 class="product__name">Bass Trombone</h3>
+                <div class="product__description">
+                    <h4 class="product__price">$900</h4>
+                    <p class="product__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi?</p>
+                    <button class="button">Select</button>
+                </div>
+            </div>
+            <div class="product">
+                <h3 class="product__name">Valve Trombone</h3>
+                <div class="product__description">
+                    <h4 class="product__price">$1200</h4>
+                    <p class="product__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi?</p>
+                    <button class="button">Select</button>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <nav class="footer-nav">
+            <ul>
+                <li class="footer-link"><a href="#">Privacy</a></li>
+                <li class="footer-link"><a href="#">Terms</a></li>
+                <li class="footer-link"><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <p>Copyright 2023, Original Trombones</p>
+    </footer>
     
 </body>
 </html>
