--- a/index.html
+++ b/index.html
@@ -5,17 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400;1,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Birthstone+Bounce&display=swap" rel="stylesheet">
+    <title>Original Trombones</title>
 </head>
 <body>
     <header id="header">
         <!-- logo -->
         <div class="logo">
-            <img src="/icons/trombone.svg" alt="Trombone Icon" id="header-img" width="100">
-            <h1 class="logo__text">Original Trombones</h1>
+            <img src="/icons/bass-clef-svgrepo-com.svg" alt="Trombone Icon" id="header-img" width="100">
+            <h1 id="logo__text"><span class="original__span">Original</span><span class="trombones__span">Trombones</span></h1>
         </div>
         <nav id="nav-bar">
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#features" class="nav-link">Features</a></li>
                 <li><a href="#howitworks" class="nav-link">How It Works</a></li>
                 <li><a href="#pricing" class="nav-link">Pricing</a></li>
@@ -84,13 +88,11 @@
         </section>
     </main>
     <footer class="footer">
-        <nav class="footer-nav">
-            <ul>
-                <li class="footer-link"><a href="#">Privacy</a></li>
-                <li class="footer-link"><a href="#">Terms</a></li>
-                <li class="footer-link"><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <ul class="footer-links">
+            <li class="footer-link"><a href="#">Privacy</a></li>
+            <li class="footer-link"><a href="#">Terms</a></li>
+            <li class="footer-link"><a href="#">Contact</a></li>
+        </ul>
         <p>Copyright 2023, Original Trombones</p>
     </footer>
     
