--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <!-- logo -->
         <div class="logo">
-            <img src="/icons/bass-clef-svgrepo-com.svg" alt="Trombone Icon" id="header-img" width="100">
+            <img src="/icons/music-svgrepo-com (1).svg" alt="Trombone Icon" id="header-img" width="100">
             <h1 id="logo__text"><span class="original__span">Original</span><span class="trombones__span">Trombones</span></h1>
         </div>
         <nav id="nav-bar">
@@ -27,23 +27,23 @@
         </nav>
     </header>
     <main class="main">
-        <section class="getStarted">
+        <section class="getstarted">
             <h2 class="getStarted__title">Handcrafted, home-made masterpieces</h3>
             <form action="https://www.freecodecamp.com/email-submit" id="form">
-                <input type="email" name="email" placeholder="Introduzca su correo electrónico" required id="email">
+                <input type="email" name="email" placeholder="Enter your email address" required id="email">
                 <input class="button" id="submit" type="submit" value="Get Started">
             </form>
         </section>
         <section id="features">
             <div class="feature">
-                <img class="feature__icon" src="icons/fire.svg" alt="Fire Icon" width="100">
+                <img class="feature__icon" src="icons/diamond-svgrepo-com.svg" alt="Fire Icon" width="100">
                 <div class="feature__text">
                     <h2 class="feature__title">Premium Materials</h3>
                     <p class="feature__description">Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
                 </div>
             </div>
             <div class="feature">
-                <img class="feature__icon" src="icons/truck.svg" alt="Truck Icon" width="100">
+                <img class="feature__icon" src="icons/plane-svgrepo-com.svg" alt="Truck Icon" width="100">
                 <div class="feature__text">
                     <h2 class="feature__title">Fast Shipping</h3>
                     <p class="feature__description">We make sure you receive your trombone as soon as we finished making it. We also provide free returns if you are not satisfied.</p>
