Casi terminado el la versión para desktop

--- a/index.html
+++ b/index.html
@@ -62,27 +62,39 @@
         </section>
         <section id="pricing">
             <div class="product">
-                <h3 class="product__name">Tenor Trombone</h3>
+                <h3 class="product__name bronze">Tenor Trombone</h3>
                 <div class="product__description">
                     <h4 class="product__price">$600</h4>
-                    <p class="product__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi?</p>
-                    <button class="button">Select</button>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <button class="button bronze">Select</button>
                 </div>
             </div>
             <div class="product">
-                <h3 class="product__name">Bass Trombone</h3>
+                <h3 class="product__name silver">Bass Trombone</h3>
                 <div class="product__description">
                     <h4 class="product__price">$900</h4>
-                    <p class="product__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi?</p>
-                    <button class="button">Select</button>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <button class="button silver">Select</button>
                 </div>
             </div>
             <div class="product">
-                <h3 class="product__name">Valve Trombone</h3>
+                <h3 class="product__name gold">Valve Trombone</h3>
                 <div class="product__description">
                     <h4 class="product__price">$1200</h4>
-                    <p class="product__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, excepturi?</p>
-                    <button class="button">Select</button>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <button class="button gold">Select</button>
                 </div>
             </div>
         </section>
