Cambios de colores

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="feature">
-                <img class="feature__icon" src="icons/plane-svgrepo-com.svg" alt="Truck Icon" width="100">
+                <img class="feature__icon" src="icons/truck-time-svgrepo-com.svg" alt="Truck Icon" width="100">
                 <div class="feature__text">
                     <h2 class="feature__title">Fast Shipping</h3>
                     <p class="feature__description">We make sure you receive your trombone as soon as we finished making it. We also provide free returns if you are not satisfied.</p>
@@ -65,11 +65,11 @@
                 <h3 class="product__name bronze">Tenor Trombone</h3>
                 <div class="product__description">
                     <h4 class="product__price">$600</h4>
+                    <p class="product__text">Lorem ipsum.</p>
+                    <p class="product__text">Lorem ipsum dolor.</p>
                     <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor.</p>
+                    <p class="product__text">Lorem ipsum dolor.</p>
                     <button class="button bronze">Select</button>
                 </div>
             </div>
@@ -78,9 +78,9 @@
                 <div class="product__description">
                     <h4 class="product__price">$900</h4>
                     <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum dolor.</p>
                     <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Lorem ipsum.</p>
                     <p class="product__text">Lorem ipsum dolor sit.</p>
                     <button class="button silver">Select</button>
                 </div>
@@ -89,9 +89,9 @@
                 <h3 class="product__name gold">Valve Trombone</h3>
                 <div class="product__description">
                     <h4 class="product__price">$1200</h4>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
-                    <p class="product__text">Lorem ipsum dolor sit.</p>
+                    <p class="product__text">Plays similar to a Trumpet</p>
+                    <p class="product__text">Great for Jazz Bands</p>
+                    <p class="product__text">Lorem ipsum dolor.</p>
                     <p class="product__text">Lorem ipsum dolor sit.</p>
                     <p class="product__text">Lorem ipsum dolor sit.</p>
                     <button class="button gold">Select</button>
