--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <!-- logo -->
         <div class="logo">
-            <img src="/icons/music-svgrepo-com (1).svg" alt="Trombone Icon" id="header-img" width="100">
+            <img src="/icons/trombone-svgrepo-com.svg" alt="Trombone Icon" id="header-img" width="100">
             <h1 id="logo__text"><span class="original__span">Original</span><span class="trombones__span">Trombones</span></h1>
         </div>
         <nav id="nav-bar">
