--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <!-- logo -->
         <div class="logo">
-            <img src="/icons/trombone-svgrepo-com.svg" alt="Trombone Icon" id="header-img" width="100">
+            <img src="/images/trombone-svgrepo-com.png" alt="Trombone Icon" id="header-img" width="100">
             <h1 id="logo__text"><span class="original__span">Original</span><span class="trombones__span">Trombones</span></h1>
         </div>
         <nav id="nav-bar">
@@ -36,21 +36,21 @@
         </section>
         <section id="features">
             <div class="feature">
-                <img class="feature__icon" src="icons/diamond-svgrepo-com.svg" alt="Fire Icon" width="100">
+                <img class="feature__icon" src="images/diamond-svgrepo-com.svg" alt="Fire Icon" width="100">
                 <div class="feature__text">
                     <h2 class="feature__title">Premium Materials</h3>
                     <p class="feature__description">Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
                 </div>
             </div>
             <div class="feature">
-                <img class="feature__icon" src="icons/truck-time-svgrepo-com.svg" alt="Truck Icon" width="100">
+                <img class="feature__icon" src="images/truck-time-svgrepo-com.svg" alt="Truck Icon" width="100">
                 <div class="feature__text">
                     <h2 class="feature__title">Fast Shipping</h3>
                     <p class="feature__description">We make sure you receive your trombone as soon as we finished making it. We also provide free returns if you are not satisfied.</p>
                 </div>
             </div>
             <div class="feature">
-                <img class="feature__icon" src="icons/quality.svg" alt="Quality Icon" width="100">
+                <img class="feature__icon" src="images/quality.svg" alt="Quality Icon" width="100">
                 <div class="feature__text">
                     <h2 class="feature__title">Quality Assurance</h3>
                     <p class="feature__description">For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
