--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header id="header">
         <!-- logo -->
         <div class="logo">
-            <svg id="header-img" height="72px" width="72px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-3.1 -3.1 21.70 21.70" xml:space="preserve" fill="#000000">
+            <svg id="header-img2" height="72px" width="72px" version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-3.1 -3.1 21.70 21.70" xml:space="preserve" fill="#000000">
 
                 <g id="SVGRepo_bgCarrier" stroke-width="0"/>
                 
@@ -24,7 +24,7 @@
                 <g id="SVGRepo_iconCarrier"> <g> <g> <polygon style="fill:#030104;" points="7.47,4.994 7.469,4.994 7.469,4.994 "/> <path style="fill:#030104;" d="M14.787,4.591c-0.944-0.944-2.481-0.944-3.426,0L7.298,8.654L5.416,6.773L7.33,4.859l0.138,0.135 c0.439-0.286,2.553-0.864,3.393-0.44C11.843,4.64,6.707-0.35,6.965,0.465C7.224,1.28,6.716,3.588,6.431,3.982L6.55,4.097 L0.844,9.803C0.821,9.826,0.801,9.852,0.783,9.877C0.757,9.895,0.732,9.914,0.708,9.938c-0.944,0.945-0.944,2.482,0,3.426 c0.945,0.945,2.482,0.945,3.426,0c0.023-0.023,0.042-0.049,0.061-0.074c0.026-0.018,0.051-0.037,0.074-0.061l2.436-2.438 l1.883,1.883l-0.807,0.807c-0.145-0.004-0.502-0.164-0.612-0.055L7,13.596c-0.213,0.213-0.001,0.77,0.212,0.984l0.242,0.24 c0.212,0.213,0.771,0.426,0.984,0.213l0.169-0.17c0.11-0.109-0.05-0.467-0.054-0.611l6.042-6.041 c0.032-0.034,0.059-0.072,0.082-0.11c0.039-0.023,0.077-0.05,0.111-0.083C15.732,7.072,15.732,5.536,14.787,4.591z M3.497,12.456 c-0.023,0.021-0.043,0.049-0.061,0.074c-0.026,0.018-0.051,0.037-0.075,0.061c-0.519,0.518-1.363,0.518-1.881,0 c-0.519-0.52-0.519-1.363,0-1.883c0.023-0.021,0.042-0.047,0.061-0.074c0.025-0.018,0.051-0.037,0.074-0.061L2.99,9.198 l1.882,1.881L3.497,12.456z M5.403,10.55L3.522,8.669l1.364-1.366l1.882,1.881L5.403,10.55z M14.016,7.245 c-0.034,0.034-0.061,0.071-0.083,0.11c-0.039,0.023-0.077,0.049-0.11,0.083l-4.704,4.704l-1.881-1.881l4.897-4.897 c0.519-0.52,1.362-0.52,1.882,0C14.535,5.881,14.535,6.726,14.016,7.245z"/> </g> </g> </g>
                 
                 </svg>
-<!--             <img src="/images/trombone-svgrepo-com.png" alt="Trombone Icon" id="header-img" width="100"> -->
+            <img src="/images/trombone-svgrepo-com.png" alt="Trombone Icon" id="header-img" width="100">
             <h1 id="logo__text"><span class="original__span">Original</span><span class="trombones__span">Trombones</span></h1>
         </div>
         <nav id="nav-bar">
@@ -78,7 +78,7 @@
             </div>
         </section>
         <section id="howitworks">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </section>
         <section id="pricing">
             <div class="product">
